--- a/cart.html
+++ b/cart.html
@@ -60,9 +60,13 @@
 
     <div class="container">
         <div class="product-container">
-          <h5 class="text-center">FOOD CART</h5>
-           <center><table class="table"></table></center>
+          <h5 class="product">PRODUCT</h5>
+          <h5 class="price">PRICE</h5>
+          <h5 class="count">QUANTITY</h5>
+          <h5 class="total">TOTAL</h5>
         </div>
+
+        <div class="products"></div>
 
     </div>
 
