--- a/dip.html
+++ b/dip.html
@@ -55,6 +55,7 @@
 
     <div class="container">
         <div class="special-column">
+            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
@@ -70,8 +71,8 @@
                                         hot, fresh slice in one of our delicious sauces. We've got so many to choose
                                         from, the possibilities are (almost) endless.?
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 100/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                </div>
                                 </div>
                             </div>
 
