--- a/gourmetthins.html
+++ b/gourmetthins.html
@@ -54,6 +54,7 @@
 
     <div class="container">
         <div class="special-column">
+            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
@@ -69,8 +70,8 @@
                                         delicious with grilled chicken, broccoli, sun-dried tomatoes, Italiano blend
                                         seasoning, goat cheese, mozzarella and Thai sweet chili sauce.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 800/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                </div>
                                 </div>
                             </div>
 
@@ -92,8 +93,8 @@
                                         homestyle tomato sauce, Italiano blend seasoning, parmesan cheese and mozzarella
                                         cheese.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 950/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                </div>
                                 </div>
                             </div>
 
@@ -113,8 +114,8 @@
                                         topped with spinach, red onions, fire roasted red peppers, goat cheese,
                                         mozzarella and pesto sauce.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 850/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -133,8 +134,8 @@
                                         with grilled chicken, sun-dried tomatoes, spinach, pesto, garlic spread and
                                         mozzarella cheese.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 700/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                </div>
                                 </div>
                             </div>
                         </div>
