--- a/meatpizzas.html
+++ b/meatpizzas.html
@@ -54,6 +54,7 @@
 
     <div class="container">
         <div class="special-column">
+            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
@@ -70,7 +71,6 @@
                                         Perfection!
                                     </p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -92,7 +92,6 @@
                                         and mozzarella cheese.
                                     </p>
                                     <p class="card-text">Starting from ksh.<span>1000</span></p>
-                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -113,7 +112,6 @@
                                         peppers, and mozzarella cheese.
                                     </p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +131,6 @@
                                         meat-lover in you.
                                     </p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +150,6 @@
                                         cheese. Tip: Try customizing to a thick crust.
                                     </p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +168,6 @@
                                         cheese, mozzarella cheese and sweet chili Thai sauce.
                                     </p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
