--- a/special.html
+++ b/special.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/crust.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/special.css" rel="stylesheet" type="text/css" media="all">
     <title>J-PIZZA</title>
 </head>
 
@@ -33,9 +33,9 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
-                        <span>0</span>
-                      </button>
+                        <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                            <span>0</span>
+                        </button>
                     </a>
                 </li>
 
@@ -49,7 +49,7 @@
 
     <div class="container-fluid" style="margin: 0px; padding: 0px;">
         <div class="specialheader text-center">
-            <h1>CRUSTS</h1>
+            <h1>SPECIALS</h1>
         </div>
     </div>
 
@@ -61,17 +61,13 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/crispycrust.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/pizza3.png" class="card-img" alt="special">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">CRISPY CRUST</h5>
-                                    <p class="card-text">We have the delicious crispy crust for your tasty
-                                        pizza. Enjoy!
-                                    </p>
+                                    <h5 class="card-title">UNLIMITED MEDIUM 2-TOPPING PIZZAS</h5>
+                                    <p class="card-text">Medium 2-topping pizza</p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                </div>
                                 </div>
                             </div>
 
@@ -82,17 +78,13 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/stuffedcrust.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/pizza1.png" class="card-img" alt="special">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">STUFFED CRUST</h5>
-                                    <p class="card-text">Enjoy the delicacy and sweetness of stuffed crust
-                                        for your pizza.
-                                    </p>
+                                    <h5 class="card-title">2-LARGE PIZZAS + A DRINK</h5>
+                                    <p class="card-text">2 Large Pizzas with 4 toppings combined, a Drink and 2 Dips</p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
-                                </div>
                                 </div>
                             </div>
 
@@ -102,17 +94,28 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/glutenfree.jpeg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/pizza1.png" class="card-img" alt="special">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">GLUTEN-FREE</h5>
-                                    <p class="card-text">Enjoy the delicacy and sweetness of gluten-free crust
-                                        for your pizza.
-                                    </p>
+                                    <h5 class="card-title">LARGE PIZZA + A DRINK</h5>
+                                    <p class="card-text">Large 3-topping pizza, 10pcs wings, a Drinks and 2 dips</p>
                                     <p class="card-text">Starting from ksh.<span>1050</span></p>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/pizza3.png" class="card-img" alt="special">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">2-MEDIUM PIZZAS + A DRINK</h5>
+                                    <p class="card-text">2 medium pizzas with 4 toppings combined, a Drinks and 2 dips
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
                                 </div>
                             </div>
                         </div>
