--- a/wings.html
+++ b/wings.html
@@ -33,9 +33,9 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
-                        <span>0</span>
-                      </button>
+                        <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                            <span>0</span>
+                        </button>
                     </a>
                 </li>
 
@@ -55,6 +55,7 @@
 
     <div class="container">
         <div class="special-column">
+            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
@@ -69,13 +70,13 @@
                                     <p class="card-text">Have your choice of wing sauce Tossed and Sauced right on your
                                         order of crispy breaded wings.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
                                 </div>
                             </div>
-
                         </div>
+
                     </div>
+
 
 
                     <div class="card mb-3">
@@ -91,13 +92,13 @@
                                         all-white-meat chicken, served with the sauce of your choice. Comes in order of
                                         10 or 20.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 950/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
                                 </div>
                             </div>
-
                         </div>
+
                     </div>
+
 
                     <div class="card mb-3">
                         <div class="row no-gutters">
@@ -111,12 +112,12 @@
                                     <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
                                         situation!
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 550/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
 
                     <div class="card mb-3">
                         <div class="row no-gutters">
@@ -130,8 +131,7 @@
                                     <p class="card-text">Have your choice of wing sauce Tossed and Sauced right on your
                                         order of crispy breaded wings.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 999/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
                                 </div>
                             </div>
                         </div>
@@ -139,45 +139,44 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer class="page-footer">
-        <div class="container-fluid" style="padding: 0px; margin: 0px;">
-            <div class="footer">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="logo">J-PIZZA
-                            <p>Come Hungry Leave Happy</p>
+        <footer class="page-footer">
+            <div class="container-fluid" style="padding: 0px; margin: 0px;">
+                <div class="footer">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="logo">J-PIZZA
+                                <p>Come Hungry Leave Happy</p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="about">
-                            <a href="#">ABOUT US</a>
+                        <div class="col-md-4">
+                            <div class="about">
+                                <a href="#">ABOUT US</a>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="copyright">
-                            Copyright @2020 Andrew John
+                        <div class="col-md-4">
+                            <div class="copyright">
+                                Copyright @2020 Andrew John
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
+        </footer>
 
-        </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
