--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/veggiepizzas.css" rel="stylesheet" type="text/css" media="all">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>J-PIZZA</title>
 </head>
 
@@ -40,7 +39,6 @@
                     </a>
                 </li>
 
-
                 <li class="nav-item accountuser">
                     <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
                 </li>
@@ -55,36 +53,8 @@
     </div>
 
     <div class="container">
-        <div class="modal fade" id="size-choice" tabindex="-1" role="dialog" aria-labelledby="size-choice"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="size-choice">CHOOSE SIZE</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body pizza-choice">
-                        <div class="form-group">
-                            <label for="pizza-size-selection">Please Select size</label>
-                            <select class="form-control" id="pizza-size-selection" required>
-                                <option selected value="Select size" disabled>Select Size</option>
-                                <option>Small 6 slices &nbsp; <strong>Ksh 500</strong></option>
-                                <option>Medium 8 slices &nbsp; <strong>Ksh 800</strong></option>
-                                <option>Large 10 slices &nbsp; <strong>Ksh 1100</strong></option>
-                                <option>X-Large 12 slices &nbsp; <strong>Ksh 1500</strong></option>
-                            </select>
-                        </div>
-                        <button type="button" class="add-cart">ADD TO CART</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
         <div class="special-column">
+            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
@@ -102,8 +72,6 @@
                                         mozzarella on a whole grain crust.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 500/=</span></p>
-                                    <button type="button" data-toggle="modal" data-target="#size-choice">ADD TO
-                                        CART</button>
                                 </div>
                             </div>
 
@@ -126,8 +94,6 @@
                                         cheese and mozzarella. What's not to love?
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 500/=</span></p>
-                                    <button type="button" data-toggle="modal" data-target="#size-choice">ADD TO
-                                        CART</button>
                                 </div>
                             </div>
 
@@ -148,8 +114,6 @@
                                         onions, green peppers, mushrooms, and topped with chili flakes and cilantro.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 500/=</span></p>
-                                    <button type="button" data-toggle="modal" data-target="#size-choice">ADD TO
-                                        CART</button>
                                 </div>
                             </div>
                         </div>
@@ -169,8 +133,6 @@
                                         alternative.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 500/=</span></p>
-                                    <button type="button" data-toggle="modal" data-target="#size-choice">ADD TO
-                                        CART</button>
                                 </div>
                             </div>
                         </div>
@@ -190,8 +152,6 @@
                                         cheese. Tip: Try customizing to a thick crust.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 500/=</span></p>
-                                    <button type="button" data-toggle="modal" data-target="#size-choice">ADD TO
-                                        CART</button>
                                 </div>
                             </div>
                         </div>
@@ -231,6 +191,7 @@
 
         </div>
     </footer>
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
