--- a/index.html
+++ b/index.html
@@ -33,14 +33,6 @@
           <a class="nav-link" href="#">ANDY 1/1</a>
         </li>
 
-        <li class="cart">
-          <a href="cart.html">
-            <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
-              <span>0</span>
-            </button>
-          </a>
-      </li>
-
         <li class="nav-item accountuser">
           <a class="nav-link" href="#" title="user account"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
         </li>
@@ -76,8 +68,8 @@
                     <h5 class="card-title"><span>UNLIMITED</span><br>MEDIUM PIZZAS,DRINK + DIPS</h5>
                     <p class="card-text">Medium 2-toppings pizza(Ksh.200/= each)</p>
                     <p>Additional charge for premium toppings. Minimum of 2 required</p><br>
-                    <p class="price">Ksh. 1100/=</p>
-                    <a href="#"><button type="button">ORDER NOW</button></a>
+                    <p class="price">Ksh. 850/=</p>
+                    <a href="order.html"><button type="button">ORDER NOW</button></a>
                   </div>
                 </div>
               </div>
@@ -97,8 +89,8 @@
                     <p class="card-text">Large PIzza + 3 Toppings + 10pcs. Chicken Wings
                       or Bites + a Drink(large) + 2 Dips</p>
                     <p>Additional charge for premium toppings</p>
-                    <p class="price">Ksh. 2000/=</p>
-                    <a href="#"><button type="button">ORDER NOW</button></a>
+                    <p class="price">Ksh. 1200/=</p>
+                    <a href="order.html"><button type="button">ORDER NOW</button></a>
                   </div>
                 </div>
               </div>
@@ -117,8 +109,8 @@
                     <p class="card-text">2 Medium Pizzas + 4 Toppings (combined) + a Drink(large)
                       + 2 Dips. Upsize to large for Ksh, 600/=</p>
                     <p>Additional charge for premium toppings</p>
-                    <p class="price">Ksh. 2200/=</p>
-                    <a href="#"><button type="button">ORDER NOW</button></a>
+                    <p class="price">Ksh. 1200/=</p>
+                    <a href="order.html"><button type="button">ORDER NOW</button></a>
                   </div>
                 </div>
               </div>
