--- a/wings.html
+++ b/wings.html
@@ -55,7 +55,7 @@
 
     <div class="container">
         <div class="special-column">
-            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
+            <center><a href="order.html"><button type="button" class="add-cart">ORDER NOW</button></a><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
@@ -70,7 +70,7 @@
                                     <p class="card-text">Have your choice of wing sauce Tossed and Sauced right on your
                                         order of crispy breaded wings.
                                     </p>
-                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <p class="card-text">Starting from ksh.<span>1000</span></p>
                                 </div>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                                         all-white-meat chicken, served with the sauce of your choice. Comes in order of
                                         10 or 20.
                                     </p>
-                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <p class="card-text">Starting from ksh.<span>1000</span></p>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                     <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
                                         situation!
                                     </p>
-                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <p class="card-text">Starting from ksh.<span>1000</span></p>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                                     <p class="card-text">Have your choice of wing sauce Tossed and Sauced right on your
                                         order of crispy breaded wings.
                                     </p>
-                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <p class="card-text">Starting from ksh.<span>1000</span></p>
                                 </div>
                             </div>
                         </div>
