--- a/order.html
+++ b/order.html
@@ -32,14 +32,6 @@
                     <a class="nav-link" href="#">ANDY 1/1</a>
                 </li>
 
-                <li class="cart">
-                    <a href="cart.html">
-                        <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
-                            <span>0</span>
-                        </button>
-                    </a>
-                </li>
-
                 <li class="nav-item accountuser">
                     <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
                 </li>
@@ -83,7 +75,7 @@
                             
                         </select><br>
 
-                        <select class="form-control" id="crust">
+                        <select class="form-control" id="crust" style="display: none;">
                             <option selected value="0" disabled>Choose Crust</option>
                             <option value="crispy">CRISPY CRUST &nbsp; Ksh. 200</option>
                             <option value="stuffed">STUFFED CRUST &nbsp; Ksh. 150</option>
