--- a/special.html
+++ b/special.html
@@ -31,15 +31,6 @@
                     <a class="nav-link" href="#">ANDY 1/1</a>
                 </li>
 
-                <li class="cart">
-                    <a href="cart.html">
-                        <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
-                            <span>0</span>
-                        </button>
-                    </a>
-                </li>
-
-
                 <li class="nav-item accountuser">
                     <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
                 </li>
@@ -55,7 +46,7 @@
 
     <div class="container">
         <div class="special-column">
-            <center><button type="button" class="add-cart">ORDER NOW</button><br><br></center>
+            <center><a href="order.html"><button type="button" class="add-cart">ORDER NOW</button></a><br><br></center>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
